--- a/style.css
+++ b/style.css
@@ -1,189 +1,133 @@
-body{
-    margin:0;
-    padding: 0;background-color: #000000;
-    
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #030202;
 }
 
-.top{
-    margin-left: 10px;
-    font-weight: bold;font-size: 25px;
-    margin-bottom: 50px;color:white;
-    margin-top: 520px;
-    
-    
-
+.Popular {
+  font-size: 24px;
+  color: rgb(254, 254, 254);
+  margin-bottom: 45px;
+  margin-left: 9px;
 }
 
-.Popular{
-    font-size: 25px;
-    color:white;
-    margin-bottom: 50px;
-    margin-left: 10px;
-    font-weight: bold;
+.top {
+  font-size: 24px;
+  margin-bottom: 45px;
+  color: rgb(228, 225, 225);
+  margin-left: 9px;
+  margin-top: 560px;
 }
 
-.Common{
-    font-size: 25px;
-    color:white;
-    margin-bottom: 50px;
-    margin-left: 10px;
-    font-weight: bold;
+.Common {
+  font-size: 24px;
+  color: white;
+  margin-bottom: 45px;
+  margin-left: 9px;
 }
 
-.nav{
-    background-color: rgb(0, 0, 0);
-    height: 60px;
-    display: grid;
-    grid-template-columns:15% 15% 40% 15% 15%;opacity: 80%;
-    
+.poster {
+  width: 100%;
+  height: 100%;
+  background-image: url(https://cdn1.dotesports.com/wp-content/uploads/2022/01/19063343/zeri-splash-1.jpg);
+  background-size: cover;
 }
 
-.icon{
-    margin-left: 70px;
-    width: 2em;
-    height: 2em;
+.hero-img {
+  width: 100%;
+  height: 100%;
 }
 
-.Int{
-    margin-top: -30px;
-    text-align: justify;width: 500px;
-    font-size: 15px;
-    
+.introduction {
+  top: 290px;
+  left: 75px;
+  position: absolute;
+  font-size: 20px;
+  color: white;
 }
 
+.ico {
+  margin-left: 75px;
+}
 
-.poster{
+.Int {
+  margin-top: -37px;
+  width: 580px;
+  font-size: 14px;
+}
+
+.ggrid {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(7, auto);
+  margin-top: -24px;
+}
+
+.backposter {
+  height: 610px;
+  position: absolute;
+  top: -45px;
+  z-index: -1;
+  width: 100%;
+}
+
+@media only screen and (max-width: 900px) {
+  .ico {
+    margin-left: 45px;
+  }
+
+  .poster {
     width: 100%;
-    height: 100%;position:relative;
-    background-image: url(https://cdn1.dotesports.com/wp-content/uploads/2022/01/19063343/zeri-splash-1.jpg);
+    opacity: 75%;
+    background-position: center;
     background-size: cover;
-    
-    
-}
+    position: relative;
+    height: 100%;
+  }
 
-.introduction{
-    top:300px;
-    left:70px;position:absolute;
-    display:inline;
-    font-size: 20px;z-index:1;
-    color:white;
-    
-}   
-    
-
-.big{
-    height: 600px;
-    position:absolute;
-    top: -50px;
+  .backposter {
     z-index: -1;
-    width:100%;
-}
+    height: 395px;
+    width: 100%;
+    top: -55px;
+    position: absolute;
+  }
 
+  .introduction {
+    display: none;
+  }
 
-.ggrid{
+  .top {
+    font-size: 24px;
+    color: white;
+    margin-top: 340px;
+    margin-bottom: 24px;
+    margin-left: 8px;
+  }
+
+  .ggrid {
+    grid-gap: 10px;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns:repeat(6,auto);
-    grid-template-rows: 250px;
-    margin-top: -25px;
-}
+  }
 
-.grid-item{
-    border: 1px solid rgba(0, 0, 0, 0.8);
-}
+  .Common {
+    font-size: 24px;
+    color: white;
+    margin-left: 8px;
+    margin-bottom: 24px;
+  }
 
-.item-img{
+  .item-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+  }
+
+  .Popular {
+    font-size: 24px;
+    color: white;
+    margin-left: 8px;
+    margin-bottom: 24px;
+  }
 }
-
-
-@media only screen and (max-width:800px){
-    .icon{
-        margin-left: 40px;
-        height: 1.5em;
-        width: 1.5em;
-    }
-    
-    .nav{
-        background-color: rgb(0, 0, 0);
-        height: 60px;
-        opacity: 80%;
-        z-index: 1;
-        display: grid;
-        grid-template-columns:repeat(5,20%);
-    }
-
-    
-}
-
-
-@media only screen and (max-width:800px){
-    .poster{
-        width: 100%;
-        opacity: 80%;background-position:center;background-size: cover;position:relative;
-        height: 100%;            
-    }
-    .big{
-       
-        z-index: -1;
-        height: 400px;width: 100%;top: -50px;position:absolute;
-    }
-    
-    .introduction{
-        display: none;
-    }
-}
-
-
-@media only screen and (max-width:800px){
-    .top{
-        font-size: 25px;
-        color:white;
-        margin-top: 300px;
-        margin-bottom: 30px;
-        margin-left: 7px;
-        font-weight: bold;
-    
-    }
-    
-    .Popular{
-        font-size: 25px;
-        color:white;
-        margin-left: 7px;
-        margin-bottom: 30px;
-        font-weight: bold;
-    }
-    
-    .Common{
-        font-size: 25px;
-        color:white;
-        margin-left: 7px;
-        margin-bottom: 30px;
-        font-weight: bold;
-    }
-    
-    .item-img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    
-    .ggrid{
-        grid-gap: 10px;
-        grid-template-columns:repeat(3,auto);
-        grid-template-rows: repeat(2,auto);padding: 10px;display: grid;
-        
-    }
-    
-    .grid-item{
-        border: 1px solid rgba(0, 0, 0, 0.8);
-    }
-    
-    
-    
-    
-    
-}
-
